# ai-sales-forecaster

./: .replit  README.md  main.py  pyproject.toml  requirements.txt
AISalesForecasterzip/: .replit  (+2 more)
AISalesForecasterzip/AISalesForecaster/: .gitignore  .replit  README.md  pyproject.toml  replit.md
AISalesForecasterzip/AISalesForecaster/attached_assets/: Pasted-Goal-Create-a-production-capable-prototype-app-named-AI-Sales-Forecaster-Business-Insight-Gen-1764246026274_1764246026275.txt  stores_sales_forecasting_1764247810199.csv
AISalesForecasterzip/AISalesForecaster/backend/: generate_demo_data.py
AISalesForecasterzip/AISalesForecaster/backend/app/: main.py
AISalesForecasterzip/AISalesForecaster/backend/app/models/: database.py  schemas.py
AISalesForecasterzip/AISalesForecaster/backend/app/routes/: __init__.py  chat.py  delete.py  download.py  forecast.py  insights.py  recommendations.py  upload.py
AISalesForecasterzip/AISalesForecaster/backend/app/services/: __init__.py  anomaly_detector.py  bias_detector.py  chat_service.py  data_pipeline.py  forecaster.py  insights_generator.py
AISalesForecasterzip/AISalesForecaster/backend/app/utils/: __init__.py  helpers.py  holidays.py
AISalesForecasterzip/AISalesForecaster/backend/data/: simple_demo.csv
AISalesForecasterzip/AISalesForecaster/backend/tests/: __init__.py  test_data_pipeline.py  test_forecaster.py  test_insights.py
AISalesForecasterzip/AISalesForecaster/frontend/: index.html  package-lock.json  package.json  vercel.json
AISalesForecasterzip/AISalesForecaster/frontend/src/: App.jsx  index.css
(+24 files in other folders)
