[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.122.0",
    "lightgbm>=4.6.0",
    "numpy>=2.3.5",
    "openai>=1.3.0",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
